--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-image: linear-gradient(to right, rgba(255,255,255, 0.7) 0 100%), url(Kevin-41.jpg);
+    background-size: contain;
+    
 }
